
2016-05-31  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_fundamental.at: Added ADD/SUBTRACT CORRESPONDING test

2016-05-22  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: changed CBL_OC_HOSTED errno test

2016-05-15  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/used_binaries.at: added tests for cobcrun -M <module>

2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/data_binary.at: added test for binary-double unsigned
	  compare when high bit set.

2016-02-01  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.at, testsuite.src/syn_reportwriter.at: RW checks earlier
	  skipped are now only comments - will be added back in 3.0 with more
	  and better checks

2016-01-12  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added targets "test" (running ANSI testsuite) and
	  "checkall" (running both GnuCOBOL and ANSI testsuite)

2015-12-23  Simon Sobisch <simonsobisch@gnu.org>

	* general: remove -std=cobol2002 for compiling (effectively using default),
	  checked with cobol2014 where checking for standard behaviour,
	  used -cb_conf when checking single compiler configurations instead
	  of creating+using a test.conf or loading a completely different -std,
	  check stdout+stderr where missing, removed the ifdef for __INTEL_COMPILER
	  as this is included via libcob.h now
	* configuration.at: check for all standard configurations -std to
	  be usable

2015-12-15  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_misc.at: command line option -a replaced with -R
	  as short form for -debug

2015-12-14  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/data_display.at: add unsigned numeric display tests

2015-11-01  Simon Sobisch <simonsobisch@gnu.org>

	* general: skip tests that need a curses build if not available
	* general: use new internal shell function _return_path for resolving paths
	  (necessary for use of paths in testsuite when testing non-cygwin builds
	  with cygwin)