@@ -5559,7 +5559,7 @@ AT_DATA([caller.cob], [
        77  try                         PIC X VALUE "a".
        77  bool                        PIC X VALUE "b".
        77  explicit                    PIC X VALUE "c".
-       77  new                         PIC X VALUE "d".
+      *77  new                         PIC X VALUE "d".
        77  static_cast                 PIC X VALUE "e".
        77  typeid                      PIC X VALUE "f".
        77  catch                       PIC X VALUE "g".
@@ -5621,7 +5621,7 @@ AT_DATA([caller.cob], [
                                  try
                                  bool
                                  explicit
-                                 new
+      *                          new
                                  static_cast
                                  typeid
                                  catch
@@ -5677,7 +5677,7 @@ AT_DATA([caller.cob], [
                                  try
                                  bool
                                  explicit
-                                 new
+      *                          new
                                  static_cast
                                  typeid
                                  catch
@@ -5829,7 +5829,7 @@ AT_DATA([callee2.cob], [
        77  try                         PIC X.
        77  bool                        PIC X.
        77  explicit                    PIC X.
-       77  new                         PIC X.
+      *77  new                         PIC X.
        77  static_cast                 PIC X.
        77  typeid                      PIC X.
        77  catch                       PIC X.
@@ -5866,7 +5866,7 @@ AT_DATA([callee2.cob], [
                                  try
                                  bool
                                  explicit
-                                 new
+      *                          new
                                  static_cast
                                  typeid
                                  catch
@@ -5900,7 +5900,7 @@ AT_DATA([callee2.cob], [
               (try                         NOT = "a") OR
               (bool                        NOT = "b") OR
               (explicit                    NOT = "c") OR
-              (new                         NOT = "d") OR
+      *       (new                         NOT = "d") OR
               (static_cast                 NOT = "e") OR
               (typeid                      NOT = "f") OR
               (catch                       NOT = "g") OR
@@ -5936,7 +5936,7 @@ AT_DATA([callee2.cob], [
                                  try
                                  bool
                                  explicit
-                                 new
+      *                          new
                                  static_cast
                                  typeid
                                  catch
